Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 4.017 devel

****  Fix not reporting some duplicate signals/ports, bug1462. [Peter Gerst]


* Verilator 4.016 2016-06-16

***   Add --quiet-exit, bug1436. [Todd Strader]

****  Error continuation lines no longer have %Error prefix.

****  Support logical equivalence operator <->.

****  Support VerilatedFstC set_time_unit, bug1433. [Pieter Kapsenberg]

****  Support deferred assertions, bug1449. [Charles Eddleston]

****  Mark infrequently called functions with GCC cold attribute.

****  Fix sign-compare warning in verilated.cpp, bug1437. [Sergey Kvachonok]

****  Fix fault on $realtime with %t, bug1443. [Julien Margetts]

****  Fix $display with string without %s, bug1441. [Denis Rystsov]

****  Fix parameter function string returns, bug1441. [Denis Rystsov]

****  Fix invalid XML output due to special chars, bug1444. [Kanad Kanhere]

****  Fix performance when mulithreaded on 1 CPU, bug1455. [Stefan Wallentowitz]

****  Fix type and real parameter issues, bug1427, bug1456, bug1458. [Todd Strader]

****  Fix build error on MinGW, bug1460. [Richard Myers]

****  Fix not reporting some duplicate signals, bug1462. [Peter Gerst]

****  Fix --savable invalid C++ on packed arrays, bug1465. [Alex Chadwick]

****  Fix constant function return of function var, bug1467. [Roman Popov]


* Verilator 4.014 2019-05-08

***   Add --trace-fst-thread.

****  Support '#' comments in $readmem, bug1411. [Frederick Requin]

****  Support "'dx" constants, bug1423. [Udi Finkelstein]

****  For FST tracing use LZ4 compression. [Tony Bybell]

****  Add error when use parameters without value, bug1424. [Peter Gerst]

****  Auto-extend and WIDTH warn on unsized X/Zs, bug1423. [Udi Finkelstein]

****  Fix missing VL_SHIFTL_ errors, bug1412, bug1415. [Larry Lee]

****  Fix MinGW GCC 6 printf formats, bug1413. [Sergey Kvachonok]
