@@ -1,0 +1,4 @@
+%Error: t/t_lint_in_inc_bad_2.vh:8: syntax error, unexpected if, expecting '('
+        t/t_lint_in_inc_bad_1.vh:6: ... note: In file included from t_lint_in_inc_bad_1.vh
+        t/t_lint_in_inc_bad.v:6: ... note: In file included from t_lint_in_inc_bad.v
+%Error: Exiting due to
